--- a/bower.json
+++ b/bower.json
@@ -18,5 +18,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "~1.3.8",
+    "bootstrap-material-design": "~0.2.1"
+  }
 }
