--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
   },
   "devDependencies": {
     "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.2",
     "gulp-jade": "^0.10.0",
+    "gulp-jshint": "^1.9.0",
     "gulp-livereload": "^3.0.2",
-    "gulp-stylus": "^1.3.4"
+    "gulp-stylus": "^1.3.4",
+    "jshint-stylish": "^1.0.0"
   }
 }
