--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-concat": "^2.4.2",
+    "gulp-express": "^0.1.2",
     "gulp-jade": "^0.10.0",
     "gulp-jshint": "^1.9.0",
     "gulp-livereload": "^3.0.2",
     "gulp-stylus": "^1.3.4",
-    "jshint-stylish": "^1.0.0"
+    "jshint-stylish": "^1.0.0",
+    "nib": "^1.0.4"
   }
 }
